fixed SA